--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.3.0
 colorama==0.4.6
 cryptography==41.0.7
 Flask==3.0.0
+Flask-Caching==2.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
