--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ MarkupSafe==3.0.3
 openpyxl==3.1.2
 packaging==25.0
 phpserialize==1.3
+reportlab==4.4.7
 pycparser==2.23
 PyMySQL==1.1.0
 python-dotenv==1.0.0
